--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,16 @@
     ],
     "rules": {
       "no-console": "off",
-      "consistent-return": "off"
+      "consistent-return": "off",
+      "max-len": [
+        "error",
+        {
+          "code": 100,
+          "tabWidth": 2,
+          "ignoreComments": true, //"comments": 80
+          "ignoreUrls": true,
+          "ignoreTemplateLiterals": true
+        }
+      ]
     }
   }
