--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "dev": "vite --open",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.4",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "ts-node-dev": "^2.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -29,6 +33,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.6.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
