--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
