--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@types/jest": "^29.5.4",
@@ -22,6 +22,8 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/mocha": "^10.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -34,8 +36,10 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "jsdom": "^22.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.3"
   }
 }
