Criando context para guardar os dados do usuario (com bugs)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
           "tabWidth": 2,
           "ignoreComments": true, //"comments": 80
           "ignoreUrls": true,
-          "ignoreTemplateLiterals": true
+          "ignoreTemplateLiterals": true,
+          "argsIgnorePattern": "^_"
         }
       ]
     }
